# ashfault

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  lint.yml  pr.yml  push.yml
assets/scripts/: globals.lua  script.lua
docs/: Doxyfile.in  MainPage.md
include/ashfault/: af_window.h  application.h  ashfault.h  buffer.hpp  descriptor_set.h  engine.h  entity.h  frame.h  pipeline.h  renderer.h  shader.h
include/ashfault/core/: af_window.h  asset_manager.hpp  camera.h  engine.h  entity.h  event.h  event_bus.hpp  input.h  layer.h  layer_stack.h  material.h  mesh.h  particle.h  pipeline_manager.h  registry.hpp  scene.h  script.h  shader_manager.h  texture.h  timer.hpp  vertex.h  window.h
include/ashfault/core/asset/: mesh_loader.h  script_loader.h  texture_loader.h
include/ashfault/core/component/: light.h  material.h  mesh.h  script.h  tag.h  transform.h
include/ashfault/core/event/: key_press.h  mouse_drag.h  mouse_scroll.h  scene_change.h  scene_start.h  script_attach.h  viewport_resize.h
include/ashfault/core/layer/: render_layer.h  script_layer.hpp
include/ashfault/core/serialization/: light_serializer.h  mesh_serializer.h  scene_serializer.h  script_serializer.h  transform_serializer.h
include/ashfault/editor/: camera.h  context.h  editor.h  editor_layer.h  state.h  ui_layer.h
include/ashfault/editor/event/: state_change.h
include/ashfault/renderer/: buffer.hpp  camera.h  descriptor_set.h  frame.h  light.h  pipeline.h  renderer.h  shader.h  swapchain.h  target.h  texture.h  vkrenderer.h
schemas/: asset.fbs  light.fbs  mesh.fbs  scene.fbs  script.fbs  tag.fbs  transform.fbs
scripts/: build.sh
shaders/: blinn_phong.frag  blinn_phong.vert  image_preview.frag  image_preview.vert  particle.comp  particle.frag  particle.vert  pbr.frag  pbr.vert  shader.frag  shader.vert  simple.frag  simple.vert
src/: application.cpp  descriptor_set.cpp  frame.cpp  main.cpp  pipeline.cpp  renderer.cpp  shader.cpp  window.cpp
src/core/: camera.cpp  engine.cpp  entity.cpp  event.cpp  input.cpp  layer.cpp  layer_stack.cpp  mesh.cpp  pipeline_manager.cpp  scene.cpp  script.cpp  shader_manager.cpp  texture.cpp  window.cpp
src/core/asset/: mesh_loader.cpp  script_loader.cpp  texture_loader.cpp
src/core/event/: key_press.cpp  mouse_drag.cpp  mouse_scroll.cpp  scene_change.cpp  scene_start.cpp  script_attach.cpp  viewport_resize.cpp
src/core/layer/: render_layer.cpp  script_layer.cpp
src/core/serialization/: light_serializer.cpp  mesh_serializer.cpp  scene_serializer.cpp  script_serializer.cpp  transform_serializer.cpp
src/editor/: camera.cpp  context.cpp  editor.cpp  editor_layer.cpp  main.cpp  ui_layer.cpp
src/editor/event/: state_change.cpp
src/renderer/: descriptor_set.cpp  frame.cpp  pipeline.cpp  renderer.cpp  shader.cpp  swapchain.cpp  target.cpp  texture.cpp  vkrenderer.cpp  window.cpp
